Fix crash when transforming text with Transform Tool twice

We should release layouts of non-gui threads right in this very
thread.

BUG:392127
(cherry picked from commit 7c379a6bf047771069ef3c006412f2245efaea6b)